<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C6DFD9"
        android:orientation="vertical"
        android:padding="35dp">

        <TextView
            android:id="@+id/congratsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:text="@string/congrats"
            android:textColor="@color/option1"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/resultsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:background="@drawable/rounded_textview"
            android:fontFamily="@font/sora"
            android:gravity="center"
            android:text="@string/results"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/tryAgainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/option1"
            android:fontFamily="@font/noto_sans"
            android:insetLeft="95dp"
            android:insetTop="110dp"
            android:insetRight="95dp"
            android:insetBottom="110dp"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="40dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>